Fix text alignment on back to shop button

--- a/css/blocks/cart.css
+++ b/css/blocks/cart.css
@@ -89,6 +89,11 @@
   display: none;
 }
 
+.woocommerce .return-to-shop a.button {
+  display: inline-flex;
+  align-items: center;
+}
+
 @media screen and (min-width: 768px) {
   .woocommerce table.cart td.actions .input-text {
     margin-right: .5rem;
